# d1000_bios

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  d1000_bios.ioc  d1000_bios_all_peripherals.ioc  flash_all.sh
CM4/: .cproject  .project
CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h
CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  uart6_stdio.c
CM7/: .cproject  .project  STM32H745BITX_FLASH.ld
CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
CM7/FATFS/App/: fatfs.c
application/CM4/fonts/: console_8x16.fnt
application/CM4/inc/: clut.h  console_8x16.h
application/CM4/src/: console_8x16.c
application/common/inc/: expansion_bus.h  uart_stdio.h
application/common/inc/commands/: cmd_check_clocks.h  cmd_ps.h
application/common/src/: expansion_bus.c  fault_handlers.c  syscall_gettimeofday.c  uart_stdio.c
application/common/src/commands/: application_commands.c  cmd_check_clocks.c  cmd_ps.c
